<?xml version="1.0" encoding="utf-8"?>
<!--
~ illumina, a pilight remote
~
~ Copyright (c) 2014 Peter Heisig <http://google.com/+PeterHeisig>
~                    CurlyMo <http://www.pilight.org>
~
~ Illumina is free software: you can redistribute it and/or modify
~ it under the terms of the GNU General Public License as published by
~ the Free Software Foundation, either version 3 of the License, or
~ (at your option) any later version.
~
~ Ilummina is distributed in the hope that it will be useful,
~ but WITHOUT ANY WARRANTY; without even the implied warranty of
~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
~ GNU General Public License for more details.
~
~ You should have received a copy of the GNU General Public License
~ along with illumina. If not, see <http://www.gnu.org/licenses/>.
-->

<resources>

    <string-array name="theme_labels">
        <item>Dark</item>
        <item>Light</item>
    </string-array>

    <string-array name="theme_values">
        <item>Theme.Illumina</item>
        <item>Theme.Illumina.Light</item>
    </string-array>

    <string name="theme_default">Theme.Illumina</string>

    <string name="app_name">illumina</string>
    <string name="settings">Settings</string>
    <string name="dummy">dummy</string>
    <string name="loading">loading</string>
    <string name="connect">connect</string>
    <string name="hostname_or_ip">Hostname or IP</string>
    <string name="port">Port</string>
    <string name="connection_help">Either set your pilight server:port configuration or let illumina locate pilight automatically.</string>
    <string name="colon">:</string>
    <string name="unknown_error">Sorry, this is an unknown error,</string>
    <string name="wrong_settings_error">Connection failed! Please reconsider your host and/or port setting.</string>
    <string name="remote_closed_connection">Your Raspberry Pi closed the connection, try reconnecting.</string>
    <string name="problem_with_pi">Connection failed! There seem to be a problem with your Raspberry Pi</string>
    <string name="no_data">Nothing found. You should configure some devices in your pilight installation. Take a look at http://wiki.pilight.org/doku.php/config</string>
    <string name="notices_title">Licences</string>
    <string name="notices_close">Close</string>
    <string name="about">About illumina</string>
    <string name="rate_illumina">Rate illumina</string>
    <string name="rate_illumina_summary">Go to the App Store and rate illumina.</string>
    <string name="licenses">Licenses</string>
    <string name="licenses_summary">Licenses of included libraries.</string>
    <string name="acra">Crash Reporting</string>
    <string name="pref_enable_acra">Enable</string>
    <string name="pref_acra_summary">Enable chrash reports to help improving illumina.</string>
    <string name="pref_acra_syslog">Include syslog</string>
    <string name="pref_acra_syslog_summary">Enable the inclusion of the log entries right before a crash.</string>
    <string name="pref_acra_alwaysaccept">Auto send</string>
    <string name="pref_acra_alwaysaccept_summary">Disable any notification and send chrash reports silently.</string>
    <string name="pref_acra_user_email">Your mail address</string>
    <string name="pref_acra_user_email_summary">If you set your mail address, the developer will be able to ask if there are any questions. There will be neither spam nor any passing of your personal data.</string>
    <string name="crash_toast_text">Sorry, there has been a chrash. Gathering information for a report.</string>
    <string name="crash_dialog_title">illumina has chrashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing illumina to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="theme">Theme</string>
    <string name="theme_summary">illumina supports a light and a dark theme. You can choose which style to use.</string>
    <string name="theme_and_behaviour">Theme &amp; Behaviour</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="contact_developer_summary">Here you can send greetings and criticism to the developer.</string>
    <string name="developer_url">https://plus.google.com/102758503227173766807</string>
    <string name="sunrise_placeholder">0:00</string>
    <string name="sunset_placeholder">0:00</string>
    <string name="temperature_placeholder">24°</string>
    <string name="humidity_placeholder">63%</string>
    <string name="unknown_placeholder">unknown</string>
    <string name="search">Find pilight</string>
    <string name="service_not_found">No service found</string>
    <string name="auto_connect">Connect automatically</string>
    <string name="auto_connect_summary">Since pilight 3, illumina can find and connect to pilight automatically.</string>
</resources>
