<?xml version="1.0" encoding="utf-8"?>
<!--
~ illumina, a pilight remote
~
~ Copyright (c) 2014 Peter Heisig <http://google.com/+PeterHeisig>
~                    CurlyMo <http://www.pilight.org>
~
~ Illumina is free software: you can redistribute it and/or modify
~ it under the terms of the GNU General Public License as published by
~ the Free Software Foundation, either version 3 of the License, or
~ (at your option) any later version.
~
~ Ilummina is distributed in the hope that it will be useful,
~ but WITHOUT ANY WARRANTY; without even the implied warranty of
~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
~ GNU General Public License for more details.
~
~ You should have received a copy of the GNU General Public License
~ along with illumina. If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/theme_and_behaviour"
        android:key="theme_and_behaviour">

        <ListPreference
            android:key="illumina.theme"
            android:title="@string/theme"
            android:summary="@string/theme_summary"
            android:entries="@array/theme_labels"
            android:entryValues="@array/theme_values"
            android:defaultValue="@string/theme_default" />

        <CheckBoxPreference
            android:key="illumina.auto_connect"
            android:title="@string/auto_connect"
            android:summary="@string/auto_connect_summary"
            android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>