<?xml version="1.0" encoding="utf-8"?>
<!--
~ illumina, a pilight remote
~
~ Copyright (c) 2014 Peter Heisig <http://google.com/+PeterHeisig>
~                    CurlyMo <http://www.pilight.org>
~
~ Illumina is free software: you can redistribute it and/or modify
~ it under the terms of the GNU General Public License as published by
~ the Free Software Foundation, either version 3 of the License, or
~ (at your option) any later version.
~
~ Ilummina is distributed in the hope that it will be useful,
~ but WITHOUT ANY WARRANTY; without even the implied warranty of
~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
~ GNU General Public License for more details.
~
~ You should have received a copy of the GNU General Public License
~ along with illumina. If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/list_item_padding"
    android:paddingRight="@dimen/list_item_padding"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:orientation="horizontal"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@android:id/text1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dummy"
            android:gravity="center_vertical" />

        <nl.pilight.illumina.layouts.FlowLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:clickable="false">

            <LinearLayout
                android:id="@+id/sunrise"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right">

                <TextView
                    android:id="@+id/sunrise_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/TextAppearance.Large"
                    android:gravity="center_vertical|right"
                    android:text="@string/sunrise_placeholder"
                    android:layout_gravity="right" />

                <ImageView
                    android:id="@+id/sunrise_image"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:adjustViewBounds="false"
                    android:alpha="0.7"
                    android:src="?attr/sunrise"
                    android:layout_gravity="center_vertical|top" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sunset"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right">

                <TextView
                    android:id="@+id/sunset_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/TextAppearance.Large"
                    android:gravity="center_vertical|right"
                    android:text="@string/sunset_placeholder"
                    android:layout_gravity="right" />

                <ImageView
                    android:id="@+id/sunset_image"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:adjustViewBounds="false"
                    android:alpha="0.7"
                    android:src="?attr/sunset"
                    android:layout_gravity="center_vertical|top" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/temperature_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/TextAppearance.Large"
                    android:gravity="center_vertical|right"
                    android:text="@string/temperature_placeholder"
                    android:layout_gravity="right" />

                <ImageView
                    android:id="@+id/temperature_image"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:adjustViewBounds="false"
                    android:alpha="0.7"
                    android:src="?attr/thermometer"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical|top" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/humidity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/TextAppearance.Large"
                    android:gravity="center_vertical|right"
                    android:text="@string/humidity_placeholder"
                    android:layout_gravity="right" />

                <ImageView
                    android:id="@+id/humidity_image"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:adjustViewBounds="false"
                    android:alpha="0.7"
                    android:src="?attr/humidity"
                    android:layout_gravity="center_vertical|top" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/battery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right">

                <ImageView
                    android:id="@+id/battery_image"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:adjustViewBounds="false"
                    android:alpha="0.7"
                    android:src="?attr/battery_empty"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right">

                <ImageButton
                    android:id="@+id/update_btn"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:adjustViewBounds="false"
                    android:alpha="0.3"
                    android:src="?attr/update"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:background="@null"
                    android:enabled="false" />

            </LinearLayout>

        </nl.pilight.illumina.layouts.FlowLayout>

    </LinearLayout>

</LinearLayout>